--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.9.1",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.3",
+    "jquery": "^3.6.1",
     "lodash": "^4.17.21",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.0",
