--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "@vimeo/player": "^2.18.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
@@ -15,6 +16,7 @@
     "dotenv": "^16.0.3",
     "jquery": "^3.6.1",
     "lodash": "^4.17.21",
+    "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.3",
