--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
-VUE_APP_API_BASE_URI=https://jsonplaceholder.typicode.com/
+VUE_APP_API_BASE_URI=https://approcket.in
+VUE_APP_API_PREFIX_URI=/api/v1
+VUE_APP_API_KEY=FIT@2022
+VUE_APP_ENC_KEY=FITM@TCH$54321
