--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "jquery": "^3.6.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "query-string": "^7.1.1",
     "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.3",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-popper": "^1.5.0"
   },
   "devDependencies": {
